force-app/main/default/objects/amazonconnect__AC_TriggerBatchJobRecords__c/amazonconnect__AC_TriggerBatchJobRecords__c.object-meta.xml
<CustomObject>
    <label>AC Trigger Batch Job Record</label>
    <nameField>
        <displayFormat>TriggerBatchJob {000000}</displayFormat>
        <label>TriggerBatchJob Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AC Trigger Batch Job Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>