force-app/main/default/objects/amazonconnect__AC_TriggerBatchJobRecords__c/fields/amazonconnect__BatchPayload__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__BatchPayload__c</fullName>
    <label>Batch Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>