force-app/main/default/objects/amazonconnect__AC_TriggerBatchJobRecords__c/fields/amazonconnect__BatchType__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__BatchType__c</fullName>
    <label>Batch Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>