force-app/main/default/objects/amazonconnect__AC_TriggerBatchJobRecords__c/fields/amazonconnect__Processed__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>